--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -12,7 +12,7 @@
           {% endif %}
         </div>
         <div class="card-body">
-          <form method="post" class="was-validated">
+          <form method="post" enctype="multipart/form-data" class="was-validated">
             {% csrf_token %}
             <div class="form-group row my-3 p-3">
               <label for="{{ form.text.id_for_label }}">
@@ -25,11 +25,17 @@
               </small>
             </div>
             <div class="form-group row my-3 p-3">
-              <label for="{{ form.group.id_for_label }}">{{ form.group.verbose_name }}</label>
+              <label for="{{ form.group.id_for_label }}">{{ form.group.label }}</label>
               {{ form.group }}
               <small class="form-text text-muted">
                 {{ form.group.help_text }}
               </small>
+            </div>
+            <div class="form-group row my-3 p-3">
+              <label for="{{ form.image.id_for_label }}">
+                {{ form.image.label }}
+              </label>
+              {{ form.image }}
             </div>
             <div class="d-flex justify-content-end">
               <button type="submit" class="btn btn-primary">
