--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}{{ post.text|truncatechars_html:30 }}{% endblock %}
 {% block content %}
 <div class="row">
   <aside class="col-12 col-md-3">
     <ul class="list-group list-group-flush">
+      {% if post.author == request.user %}
+      <li class="list-group-item">
+        <a href="{% url 'posts:post_edit' post_id=post.id %}"
+          class="btn btn-outline-secondary btn-sm">
+            <i class="fas fa-pencil-alt"></i> 
+            Редактировать
+        </a>
+      </li>
+      {% endif %}
       <li class="list-group-item">
         Дата публикации: {{ post.pub_date }}
       </li>
@@ -31,7 +41,12 @@
     </ul>
   </aside>
   <article class="col-12 col-md-9">
+    <div class="card my-4">
+    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+    {% endthumbnail %}
     <p>{{ post.text }}</p>
+    </div>
   </article>
 </div>
 {% endblock %}
