--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load user_filters %}
 {% load thumbnail %}
 {% block title %}{{ post.text|truncatechars_html:30 }}{% endblock %}
 {% block content %}
@@ -47,6 +48,32 @@
     {% endthumbnail %}
     <p>{{ post.text }}</p>
     </div>
+    {% if user.is_authenticated %}
+    <div class="card my-4">
+      <h5 class="card-header">Добавить комментарий:</h5>
+        <div class="card-body">
+        <form method="post" action="{% url 'posts:add_comment' post.id %}">
+          {% csrf_token %}
+          {{ form.text|addclass:"form-control" }}
+          <button type="submit">Отправить</button>
+        </form>
+        </div>
+    </div>
+    {% endif %}
+    {% for comment in comments %}
+      <div class="media mb-4">
+        <div class="media-body">
+          <h5 class="mt-0">
+            <a href="{% url 'posts:profile' comment.author.username %}">
+              {{ comment.author.username }}
+            </a>
+          </h5>
+          <p>
+            {{ comment.text }}
+          </p>
+        </div>
+      </div>
+    {% endfor %} 
   </article>
 </div>
 {% endblock %}
